# django-subscriptions-rt

./: .cruft.json  .gitignore  CHANGELOG.md  README.md  noxfile.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  publish.yml
demo/: docker-compose.yml  pyproject.toml
demo/demo/: db_router.py  settings.py  urls.py  views.py
demo/demo/templates/demo/: home.html
demo/demo/tests/: conftest.py  conftest_reports.py  helpers.py  test_api.py  test_apple_provider.py  test_apple_receipt_validator.py  test_apple_signed_payload_validation.py  test_apple_webhook.py  test_check_duplicated_subscriptions.py  test_default_plan.py  test_functions.py  test_google_in_app.py  test_helpers.py  test_migration_with_deduplication.py  test_models.py  test_notifications.py  test_paddle.py  test_quota.py  test_reports.py  test_subscription.py  test_subscription_queryset.py  test_tasks.py  test_trial_period.py  test_usage.py  test_utils.py  utils.py
demo/demo/tests/conf/: __init__.py  apple_in_app.py  google_in_app.py  paddle.py
demo/demo/tests/fixtures/: __init__.py  apple_in_app.py  google_in_app.py  main.py  paddle.py  reports.py
payments/: admin.py  exceptions.py  fields.py  functions.py  helpers.py  middleware.py  models.py  signals.py  urls.py  utils.py  views.py
payments/api/: serializers.py  urls.py  views.py
payments/migrations/: 0001_initial.py  0002_alter_subscription_begin.py  0003_alter_plan_charge_amount_alter_usage_datetime.py  0004_rename_begin_subscription_start.py  0005_plan_slug.py  0006_alter_plan_charge_period_and_more.py  0007_subscriptionpayment_and_more.py  0008_rename_vendor_subscriptionpayment_provider_name_and_more.py
payments/providers/: __init__.py
payments/providers/dummy/: __init__.py
payments/providers/stripe/: __init__.py  models.py
payments/templates/payments/: pay.html  payment-success.html  plan_detail.html
src/subscriptions/_internal/: __init__.py  admin.py  apps.py  defaults.py  exceptions.py  fields.py  forms.py  functions.py  metrics.py  middleware.py  models.py  reports.py  signals.py  tasks.py  urls.py  utils.py  validators.py  views.py
src/subscriptions/_internal/api/: fields.py  serializers.py  urls.py  (+2 more)
src/subscriptions/v0/: __init__.py  admin.py  apps.py  defaults.py  exceptions.py  fields.py  functions.py  metrics.py  middleware.py  models.py  reports.py  signals.py  tasks.py  urls.py  utils.py  validators.py  views.py
subscriptions/: __init__.py  admin.py  defaults.py  exceptions.py  functions.py  logging.py  middleware.py  models.py  reports.py  signals.py  tasks.py  urls.py  utils.py  validators.py  views.py
subscriptions/api/: exceptions.py  fields.py  serializers.py  urls.py  views.py
subscriptions/logic/: notifications.py
subscriptions/management/commands/: add_default_plan_to_users.py  check_duplicated_subscriptions.py  check_unfinished_payments.py
subscriptions/migrations/: 0001_initial.py  0002_alter_subscription_begin.py  0002_subscriptionpayment_metadata_and_more.py  0003_alter_plan_charge_amount_alter_usage_datetime.py  0003_remove_subscriptionpayment_subscription_charge_date_and_more.py  0004_remove_plan_unique_plan_slug_remove_plan_slug.py  0004_rename_begin_subscription_start.py  0005_alter_subscriptionpayment_metadata_and_more.py  0005_plan_slug.py  0006_alter_plan_charge_period_and_more.py  0006_subscription_quantity.py  0007_alter_subscriptionpayment_provider_transaction_id_and_more.py  0007_subscriptionpayment_and_more.py  0008_rename_vendor_subscriptionpayment_provider_name_and_more.py  0008_subscriptionpayment_quantity.py  0009_auto_20220711_2159.py  0010_subscription_auto_prolong_and_more.py  0011_alter_plan_charge_amount_currency_alter_plan_id_and_more.py  0012_subscription_uid_subscriptionpayment_uid_and_more.py  0013_alter_subscription_uid_alter_subscriptionpayment_uid_and_more.py  0014_subscriptionpayment_subscription_uid_and_more.py  0015_auto_20220728_1920.py  0016_remove_subscriptionpayment_subscription_and_more.py  0017_alter_subscriptionpayment_subscription_uid_and_more.py  0018_remove_subscription_id_remove_subscriptionpayment_id_and_more.py  0019_rename_subscription_uid_subscriptionpayment_subscription_and_more.py  0020_alter_subscriptionpaymentrefund_original_payment_and_more.py  0021_alter_subscriptionpayment_subscription_and_more.py  0022_alter_subscriptionpayment_subscription_and_more.py  0023_alter_subscription_options_and_more.py  0024_alter_subscriptionpayment_amount_and_more.py  0025_feature_tier_plan_tier.py  0026_alter_feature_description_alter_plan_tier_and_more.py  0026_alter_subscriptionpayment_status_and_more.py  0027_auto_20221109_1525.py  0028_tier_level.py  0029_alter_plan_charge_amount_currency_and_more.py  0030_feature_is_negative.py  0031_alter_plan_tier.py  0032_alter_subscriptionpayment_options_and_more.py  (+9 more)
subscriptions/providers/: __init__.py
subscriptions/providers/apple_in_app/: __init__.py  api.py  app_store.py  enums.py  exceptions.py
subscriptions/providers/dummy/: __init__.py  forms.py  serializers.py
subscriptions/providers/google_in_app/: __init__.py  exceptions.py  models.py  schemas.py  tasks.py
subscriptions/providers/paddle/: __init__.py  api.py  models.py  serializers.py
subscriptions/tests/providers/: test_apple_receipt_validator.py
tests/: .env  conftest.py  db_router.py  django_fixtures.py  docker-compose.yml  settings.py  urls.py
tests/unit/: conftest.py  helpers.py
tests/unit/api/: test_api.py  test_setup.py
tests/unit/fixtures/: __init__.py  apple_in_app.py  google_in_app.py  main.py  paddle.py  reports.py
tests/unit/internal/: test_apple_provider.py  test_apple_receipt_validator.py  test_apple_signed_payload_validation.py  test_apple_webhook.py  test_check_duplicated_subscriptions.py  test_default_plan.py  test_django_setup.py  test_functions.py  test_google_in_app.py  test_migration_with_deduplication.py  test_models.py  test_paddle.py  test_quota.py  test_reports.py  test_signals.py  test_subscription.py  test_subscription_queryset.py  test_tasks.py  test_trial_period.py  test_utils.py
(+78 files in other folders)
