[metadata]
name = django-subscriptions-rt
version = 0.0.1
author = Aleksandr Goncharov
author_email = aleksandr.goncharov@reef.pl
description = Subscriptions and payments for your django app
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/reef-technologies/django-subscriptions-rt
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = subscriptions
python_requires = >=3.6
install_requires =
    django>=3.1
    django-money~=2.1.1
    more_itertools~=8.12.0
    python-dateutil~=2.8.2
    djangorestframework~=3.13.1
    requests~=2.27.1
    tenacity~=8.0.1
    PyJWT~=2.5.0
    pyOpenSSL~=22.1.0
    cryptography~=38.0.1
    pydantic~=1.10.2

[options.package_data]
* = *.py, */*.py, */*/*.py, */*/*/*.py, *.html, */*.html, */*/*.html, */*/*/*.html

[mypy]
plugins =
    mypy_django_plugin.main
strict_optional = True
ignore_missing_imports = True

[mypy.plugins.django-stubs]
django_settings_module = demo.demo.settings

[tool:pytest]
filterwarnings =
    ignore::DeprecationWarning:moneyed.localization:
DJANGO_SETTINGS_MODULE = demo.demo.settings
