[metadata]
name = django-subscriptions-rt
version = 1.0.1
author = Aleksandr Goncharov
author_email = aleksandr.goncharov@reef.pl
description = Subscriptions and payments for your django app
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/reef-technologies/django-subscriptions-rt
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = subscriptions
python_requires = >=3.6
install_requires =
    django>=3.2
    django-money~=3.1
    more_itertools~=9.1
    python-dateutil~=2.8
    djangorestframework~=3.14
    requests~=2.31
    tenacity~=8.2
    pydantic~=1.10
include_package_data = True

[options.extras_require]
apple_in_app =
    PyJWT~=2.7
    pyOpenSSL~=23.2
    cryptography>=41.0.1
google_in_app =
    google-api-python-client~=2.88.0
    oauth2client~=4.1.3
default_plan =
    django-constance[database]~=2.9

[options.package_data]
* = *.py, */*.py, */*/*.py, */*/*/*.py, *.html, */*.html, */*/*.html, */*/*/*.html, */*/*/*.cer

[mypy]
plugins =
    mypy_django_plugin.main
strict_optional = True
ignore_missing_imports = True

[mypy.plugins.django-stubs]
django_settings_module = demo.demo.settings

[tool:pytest]
filterwarnings =
    ignore::DeprecationWarning:moneyed.localization:
DJANGO_SETTINGS_MODULE = demo.demo.settings
